--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,19 @@
 /log/*
 !/log/.keep
 /tmp
+
+# Ignore images by paperclip
+/public/system
+
+.env
+
+## Environment normalization:
+/.bundle
+/vendor/bundle
+
+# Ignore Byebug command history file.
+.byebug_history
+B
+A
+A
+.byebug_history
